# vilici

./: .gitignore  .gitmodules  CMakeLists.txt  a.out  core  draw.h  main.c  rgb.h
resources/: config.ini  config.toml
src/: color.h  color.hpp  config.cpp  config.h  config.hpp  event.cpp  event.hpp  fb.cpp  fb.h  fb.hpp  fmt.hpp  font.cpp  font.hpp  key_codes.hpp  log.cpp  log.hpp  main.cpp
